syntax = "proto3";
option csharp_namespace = "Itmo.Dev.Asap.Core.Models";

import "models/submission_state.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

message Submission {
  string id = 1;
  int32 code = 2;
  google.protobuf.Timestamp submission_date = 3;
  string student_id = 4;
  string assignment_id = 5;
  string payload = 6;
  google.protobuf.DoubleValue extra_points = 7;
  google.protobuf.DoubleValue points = 8;
  string assignment_short_name = 9;
  SubmissionState state = 10;
}